--- a/Notre Site/site_officiel_après_Lundi/templates/result.html
+++ b/Notre Site/site_officiel_après_Lundi/templates/result.html
@@ -1,33 +1,45 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    
-<title>page 1</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<style>
-    body {
-background-color: wheat;
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Résultat de recherche</title>
+    <style>
+
+        body{
+            background-color: antiquewhite;
+        }
+
+
+/* barre de navigation */
+ul {
+  list-style-type: none;
+  margin-top: 10px;
+  padding: 0;
+  overflow: hidden;
+  background-color: #f5e2e23b;
+
 }
 
 
+li a {
+  display: block;
+  color: black;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
 
-header{
-background: rgba( 120, 196, 237 ,0.6);
-display: flex;
-justify-content: center;
-background-attachment: fixed;
-background-size: over;
-height: 200px;
-border: 2px solid black;
-border-radius: 10px;
-
+li a:hover {
+  background-color: #f3ecec;
 }
 
 
-
-/* responsive */
+        /* responsive */
     * {
       box-sizing: border-box;
+      
     }
     
     input[type=text], select, textarea {
@@ -75,14 +87,14 @@ border-radius: 10px;
 
     .col-25 {
       float: left;
-      width: 25%;
+      width: 40%;
       margin-top: 6px;
 
     }
     
     .col-75 {
       float: left;
-      width: 75%;
+      width: 60%;
       margin-top: 6px;
       background-color: rgba(194, 181, 255, 0.616);
       border-radius: 10px;
@@ -103,257 +115,59 @@ border-radius: 10px;
         margin-top: 0;
       }
     }
-    
-</style>
+    </style>
+
+
 </head>
-
-
-<header>
-
-    <h1 style="padding-top:20px ;">Avis des jeux ainsi que leurs notes</h1>
-
-
-</header>
-
 <body>
 
+  <ul>
+    <li><a href="{{url_for('recherche')}}">Revenir sur la page des jeux</a></li>
+  </ul>
     <div class="container">
         
         <div class="row">
           <div class="col-25">
-            <form action="{{url_for('recherche')}}" method="POST">
-              <button type="submit" value="Minecraft" name="game"><img src = "{{url_for('static', filename='images/minecraft.jpg')}}"></button>
-
-            </form>
+            <img src="{{ image }}" class="logo">
           </div>
           <div class="col-75">
             <div class="oui" >
-                <ul>
-                    <li>{{nom_minecraft}}</li>
-                    <li> Le jeu est sortie en {{date_minecraft}}</li>
-                    <li>{{note_minecraft}} / 10</li>
-                </ul>
-
+                <h1 style="font: 120px;">{{nom_game}}</h1>
             </div>
           </div>
         </div>
-        
 
-      </div>
-      <div class="container">
-        
-        <div class="row">
-          <div class="col-25">
-            <form action="{{url_for('recherche')}}" method="POST">
-              <button type="submit" value="Valorant" name="game"><img src = "{{url_for('static', filename='images/valorant.jpg')}}"></button>
-            </form>
-          </div>
-          <div class="col-75">
-            <div class="oui" >
-                <ul>
-                    <li>{{nom_Valorant}}</li>
-                    <li> Le jeu est sortie en {{date_Valorant}}</li>
-                    <li>{{note_Valorant}} / 10</li>
-                </ul>
+        <div class="col-100%">
+            <br>
+            <ul>
+                <li>Le jeu {{nom_game}} est un jeu fait en {{date_game}}. </li>
+                <li> Le jeu {{nom_game}} a recensé {{len_profils}} avec une moyenne de {{note_game}} / 10. </li>
+                <li> Avis général : {{avis_game}} </li>
 
-            </div>
-          </div>
+            </ul>
+
         </div>
+
+    </div>   
         
 
-      </div>
-
-      <div class="container">
-        
-        <div class="row" >
-          <div class="col-25">
-            <form action="{{url_for('recherche')}}" method="POST">
-              <button type="submit" value="Apex" name="game"><img src = "{{url_for('static', filename='images/apex.jpg')}}"></button>
-            </form>
-          </div>
-          <div class="col-75">
-            <div class="oui" >
-                <ul>
-                    <li>{{nom_Apex}}</li>
-                    <li> Le jeu est sortie en {{date_Apex}}</li>
-                    <li>{{note_Apex}} / 10</li>
-                </ul>
-
-            </div>
-          </div>
-        </div>
-        
-
-      </div>
-
-      <div class="container">
-        
-        <div class="row">
-          <div class="col-25">
-            <form action="{{url_for('recherche')}}" method="POST">
-              <button type="submit" value="Roblox" name="game"><img src = "{{url_for('static', filename='images/roblox.jpg')}}"></button>
-            </form>
-          </div>
-          <div class="col-75">
-            <div class="oui" >
-                <ul>
-                    <li>{{nom_Roblox}}</li>
-                    <li> Le jeu est sortie en {{date_Roblox}}</li>
-                    <li>{{note_Roblox}} / 10</li>
-                </ul>
-
-            </div>
-          </div>
-        </div>
-        
-
-      </div>
-
-      <div class="container">
-        
-        <div class="row">
-          <div class="col-25">
-            <form action="{{url_for('recherche')}}" method="POST">
-              <button type="submit" value="CS:GO" name="game"><img src = "{{url_for('static', filename='images/csgo.jpg')}}"></button>
-            </form>
-          </div>
-          <div class="col-75">
-            <div class="oui" >
-                <ul>
-                    <li>{{nom_CSGO}}</li>
-                    <li> Le jeu est sortie en {{date_CSGO}}</li>
-                    <li>{{note_CSGO}} / 10</li>
-                </ul>
-
-            </div>
-          </div>
-        </div>
-        
-
-      </div>
-
-      <div class="container">
-        
-        <div class="row">
-          <div class="col-25">
-            <form action="{{url_for('recherche')}}" method="POST">
-              <button type="submit" value="Super Smash Bros Ultimate" name="game"><img src = "{{url_for('static', filename='images/ssbu.png')}}"></button>
-            </form>
-          </div>
-          <div class="col-75">
-            <div class="oui" >
-                <ul>
-                    <li>{{nom_SSBU}}</li>
-                    <li> Le jeu est sortie en {{date_SSBU}}</li>
-                    <li>{{note_SSBU}} / 10</li>
-                </ul>
-
-            </div>
-          </div>
-        </div>
-        
-
-      </div>
+        {% for i in range(1, len_profils + 1)%}
 
         <div class="container">
-        
-        <div class="row">
-          <div class="col-25">
-            <form action="{{url_for('recherche')}}" method="POST">
-              <button type="submit" value="GTA 5" name="game"><img src="{{url_for('static', filename='images/gta.jpg')}}"></button>
-            </form>
-          </div>
-          <div class="col-75">
-            <div class="oui" >
-                <ul>
-                    <li>{{nom_GTAV}}</li>
-                    <li> Le jeu est sortie en {{date_GTAV}}</li>
-                    <li>{{note_GTAV}} / 10</li>
-                </ul>
-
+            <div class="row-30%">
+                <h1 style="font-size: 25px;">{{profils[-i][0]}} : {{profils[-i][1]}} /10</h1>
             </div>
-          </div>
-        </div>
-        
-
-      </div>
-
-
-
-        <div class="container">
-        
-        <div class="row">
-          <div class="col-25">
-            <form action="{{url_for('recherche')}}" method="POST">
-              <button type="submit" value="Fortnite" name="game"><img src="{{url_for('static', filename='images/fortnite.jpg')}}"></button>
-            </form>
-          </div>
-          <div class="col-75">
-            <div class="oui" >
-                <ul>
-                    <li>{{nom_Fortnite}}</li>
-                    <li> Le jeu est sortie en {{date_Fortnite}}</li>
-                    <li>{{note_Fortnite}} / 10</li>
-                </ul>
-
+            <div class="row-70%">
+                <p>
+                    {{profils[-i][2]}}
+                </p>
+    
+    
             </div>
-          </div>
         </div>
-        
+        {% endfor %}
 
-      </div>
-
-      
-      <div class="container">
-        
-        <div class="row">
-          <div class="col-25">
-            <form action="{{url_for('recherche')}}" method="POST">
-              <button type="submit" value="Super Mario Odyssey" name="game"><img src="{{url_for('static', filename='images/super-mario-odyssey.png')}}"></button>
-            </form>
-        </form>
-          </div>
-          <div class="col-75">
-            <div class="oui" >
-                <ul>
-                    <li>{{nom_Super_mario_odyssey}}</li>
-                    <li> Le jeu est sortie en {{date_Super_mario_odyssey}}</li>
-                    <li>{{note_Super_mario_odyssey}} / 10</li>
-                </ul>
-
-            </div>
-          </div>
-        </div>
-        
-
-      </div>
-
-
-      <div class="container">
-        
-        <div class="row">
-          <div class="col-25">
-            <form action="{{url_for('recherche')}}" method="POST">
-              <button type="submit" value="Cyberpunk 2077" name="game"><img src="{{url_for('static', filename='images/cyberpunk.jpg')}}"></button>
-            </form>
-          </div>
-          <div class="col-75">
-            <div class="oui" >
-                <ul>
-                    <li>{{nom_Cyberpunk}}</li>
-                    <li> Le jeu est sortie en {{date_Cyberpunk}}</li>
-                    <li>{{note_Cyberpunk}} / 10</li>
-                </ul>
-
-            </div>
-          </div>
-        </div>
-        
-
-      </div>
-
+    </div>
 
 </body>
-
-
 </html>
